# starlight-bot

./: .gitignore  README.md  filestruct.md  pyproject.toml  requirements.txt  run.py
starlight/: __init__.py  core.py  logging.cfg  utils.py
starlight/cogs/: errors.py  fun.py  general.py
